fixed typo in homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://KSzostko.github.io/FavNote",
+  "homepage": "http://kszostko.github.io/FavNote",
   "name": "favnote",
   "version": "0.1.0",
   "private": true,
